avoid <br/> for spacing and use margin

--- a/styles/components/_board.scss
+++ b/styles/components/_board.scss
@@ -1,3 +1,8 @@
-table {
-  margin: 0 auto;
+$spacing: 10px;
+
+.board {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: $spacing;
+  margin-bottom: $spacing;
 }
